Pebble template rendering