@@ -7,10 +7,7 @@ import org.springframework.data.mongodb.core.index.Indexed;
 import org.springframework.data.mongodb.core.mapping.Document;
 
 import java.time.Instant;
-import java.util.Collections;
-import java.util.LinkedHashMap;
 import java.util.Map;
-import java.util.Objects;
 import java.util.UUID;
 
 @Document("documents")
@@ -21,7 +18,8 @@ public class PeelDocument {
     @Indexed(unique = true)
     private final String id;
     private final String name;
-    private final Map<String, Object> content;
+    private final String script;
+    private final String template;
     private final Map<String, Object> exampleBindings;
     private final Instant createdAt;
     private final Instant updatedAt;
@@ -30,37 +28,46 @@ public class PeelDocument {
     private PeelDocument(
             String id,
             String name,
-            Map<String, Object> content,
+            String script,
+            String template,
             Map<String, Object> exampleBindings,
             Instant createdAt,
             Instant updatedAt
     ) {
         this.id = id;
         this.name = name;
-        this.content = copyMap(content);
-        this.exampleBindings = copyMap(exampleBindings);
+        this.script = requireScript(script);
+        this.template = requireTemplate(template);
+        this.exampleBindings = normalizeBindings(exampleBindings);
         this.createdAt = createdAt;
         this.updatedAt = updatedAt;
     }
 
-    public static PeelDocument newDocument(String name, Map<String, Object> content, Map<String, Object> exampleBindings) {
+    public static PeelDocument newDocument(
+            String name,
+            String script,
+            String template,
+            Map<String, Object> exampleBindings
+    ) {
         Instant now = Instant.now();
         return new PeelDocument(
                 UUID.randomUUID().toString(),
                 normalizeName(name),
-                requireContent(content),
-                normalizeBindings(exampleBindings),
+                script,
+                template,
+                exampleBindings,
                 now,
                 now
         );
     }
 
-    public PeelDocument update(String name, Map<String, Object> content, Map<String, Object> exampleBindings) {
+    public PeelDocument update(String name, String script, String template, Map<String, Object> exampleBindings) {
         return new PeelDocument(
                 id,
                 normalizeName(name),
-                requireContent(content),
-                normalizeBindings(exampleBindings),
+                script,
+                template,
+                exampleBindings,
                 createdAt,
                 Instant.now()
         );
@@ -73,19 +80,24 @@ public class PeelDocument {
         return name.strip();
     }
 
-    private static Map<String, Object> requireContent(Map<String, Object> content) {
-        Objects.requireNonNull(content, "content");
-        return copyMap(content);
+    private static String requireScript(String script) {
+        if (script == null || script.isBlank()) {
+            throw new IllegalArgumentException("script must not be blank");
+        }
+        return script;
+    }
+
+    private static String requireTemplate(String template) {
+        if (template == null || template.isBlank()) {
+            throw new IllegalArgumentException("template must not be blank");
+        }
+        return template;
     }
 
     private static Map<String, Object> normalizeBindings(Map<String, Object> bindings) {
         if (bindings == null) {
             return Map.of();
         }
-        return copyMap(bindings);
-    }
-
-    private static Map<String, Object> copyMap(Map<String, Object> source) {
-        return Collections.unmodifiableMap(new LinkedHashMap<>(source));
+        return Map.copyOf(bindings);
     }
 }
